<resources>
    <string name="app_name">MyntWeather</string>
    <string name="login_to_account">Log into your account</string>
    <string name="email">Email</string>

    <string name="weather">Weather</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="register_text">Don\'t have an account. </string>
    <string name="register_now"><u>Register now</u></string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_valid_name">Name should be of 4 characters</string>
    <string name="enter_valid_password">Password should be of 6 characters</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="myntWeather">Mynt Weather</string>
    <string name="locationPermissionMsg">Please accept location permission to use this application</string>
    <string name="temperature_format">%1$s \u2103</string>
    <string name="sunrise_time">Sunrise at: 1%$s</string>
    <string name="sunset_time">Sunset at: 1%$s</string>
    <string name="city_country">%1$s, %2$s</string>
    <string name="no_network_available">You are offline</string>
    <string name="no_network_msg">Check your internet connection and try again</string>
    <string name="try_again">Try Again</string>
    <string name="no_history_available">No history available!</string>
    <string name="userName">Hi! %s</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="location_service">Location service</string>
    <string name="enable_location_service">Please enable your location service.</string>
</resources>