<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="listener"
            type="com.mynt.weather.interfaces.MClickListener" />

        <variable
            name="vm"
            type="com.mynt.weather.viewmodel.RegistrationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activities.RegistrationActivity">

            <TextView
                android:id="@+id/regisyterTextView"
                style="@style/bold_black_text_26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:layout_constraintBottom_toTopOf="@+id/guideline1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.16" />

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="@dimen/hundredDp"
                android:layout_height="@dimen/hundredDp"
                android:src="@drawable/icon_weather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline1" />

            <EditText
                android:id="@+id/editTextLoginName"
                style="@style/edit_test_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixtyFourDp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:onTextChanged="@{vm::onNameEditTextChanged}"
                android:text="@={vm.user.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewLogo" />


            <TextView
                android:id="@+id/textViewErrorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fourDp"
                android:layout_marginEnd="@dimen/fourDp"
                android:text="@string/please_enter_valid_name"
                android:textColor="@color/red"
                android:visibility="@{vm.validName?View.INVISIBLE:View.VISIBLE,default=invisible}"
                app:layout_constraintEnd_toEndOf="@id/editTextLoginName"
                app:layout_constraintTop_toBottomOf="@id/editTextLoginName" />

            <EditText
                android:id="@+id/editTextLoginEmail"
                style="@style/edit_test_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteenDp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{vm::onEmailEditTextChanged}"
                android:text="@={vm.user.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewErrorName" />


            <TextView
                android:id="@+id/textViewErrorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fourDp"
                android:layout_marginEnd="@dimen/fourDp"
                android:text="@string/please_enter_valid_email"
                android:textColor="@color/red"
                android:visibility="@{vm.validEmail?View.INVISIBLE:View.VISIBLE,default=invisible}"
                app:layout_constraintEnd_toEndOf="@id/editTextLoginEmail"
                app:layout_constraintTop_toBottomOf="@id/editTextLoginEmail" />

            <EditText
                android:id="@+id/editTextLoginPassword"
                style="@style/edit_test_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteenDp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="6"
                android:onTextChanged="@{vm::onPasswordEditTextChanged}"
                android:text="@={vm.user.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewErrorEmail" />

            <TextView
                android:id="@+id/textViewErrorPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fourDp"
                android:layout_marginEnd="@dimen/fourDp"
                android:text="@string/enter_valid_password"
                android:textColor="@color/red"
                android:visibility="@{vm.validPassword?View.INVISIBLE:View.VISIBLE,default=invisible}"
                app:layout_constraintEnd_toEndOf="@id/editTextLoginEmail"
                app:layout_constraintTop_toBottomOf="@id/editTextLoginPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                style="@style/button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twentySixdDp"
                android:onClick="@{v->listener.onButtonClicked(v)}"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewErrorPassword" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>